align venue index card images correctly to corner of card

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -50,3 +50,7 @@
   text-decoration-line: none;
   color: inherit;
 }
+
+.venue_card__image {
+  margin-left: -15px;
+}
